# custom-search-agent

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  app.py  pyproject.toml
backend/oai/: __init__.py  async_chat.py  client.py  config.py  models.py  structured.py  sync_chat.py
backend/tests/: conftest.py  test_extractor.py  test_oai.py  test_orchestrator.py  test_performance.py  test_pipeline.py  test_scrubber.py  test_summarizer.py  test_tvly.py
backend/tvly/: __init__.py  client.py  config.py  models.py  search.py
backend/workflow/: __init__.py  extractor.py  main.py  orchestrator.py  pipeline.py  scrubber.py  search.py  summarizer.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: chat.ts
frontend/src/components/: index.ts
frontend/src/components/ChatInput/: ChatInput.tsx
frontend/src/components/Icons/: index.tsx
frontend/src/components/MessageList/: MessageList.css  MessageList.tsx
frontend/src/components/WelcomeScreen/: WelcomeScreen.css  WelcomeScreen.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useChat.ts
frontend/src/styles/: ChatInput.css  global.css
frontend/src/types/: index.ts
